--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.4",
     "@syncfusion/ej2-react-kanban": "^28.2.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
