--- a/backend/package.json
+++ b/backend/package.json
@@ -23,5 +23,8 @@
     "mongoose": "^8.9.7",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.3.1"
   }
 }
